--- a/src/views/pages/class/classroom.ejs
+++ b/src/views/pages/class/classroom.ejs
@@ -10,10 +10,12 @@
 
 <body>
   <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
+
   <main class="sm:ml-64 p-6">
     <h1 class="text-3xl font-semibold mb-4">Welcome back, <span id="user-name">User</span>!</h1>
     <p class="mb-6 text-lg">Here’s a quick overview of your classroom activities.</p>
 
+    <!-- Classroom overview cards -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
       <div class="bg-background-50 p-4 shadow-lg rounded-lg transition-transform transform hover:scale-105">
         <h2 class="font-semibold text-xl">Classroom Settings</h2>
@@ -52,10 +54,13 @@
       </div>
     </div>
   </main>
+
   <script>
+    // Initialize classroom and user modules
     const classroom = new Classroom(app);
     const user = new User(app);
 
+    // Get classroom details
     classroom.getClass("<%= classId %>").then((response) => {
       if (response.status === "success") {
         const students = response.data.students.filter((student) => !student.deleted);
@@ -69,6 +74,7 @@
         studentsCount.classList.remove("hidden");
         adminsCount.classList.remove("hidden");
       } else {
+        // Handle errors based on the response
         if (response.error.code === "CLASS_NOT_FOUND" || response.error.code === "INVALID_CLASS_ID") {
           app.location.showNotFound();
         } else if (response.error.code === "ACCESS_DENIED") {
@@ -77,6 +83,7 @@
       }
     });
 
+    // Get user details
     user.getUser().then((response) => {
       if (response.status === "success") {
         document.getElementById("user-name").textContent = response.data.displayName;
