--- a/src/views/pages/class/task-grade.ejs
+++ b/src/views/pages/class/task-grade.ejs
@@ -11,6 +11,7 @@
 <body class="lg:overflow-y-hidden">
   <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
   <main class="sm:ml-64 p-6 flex flex-col lg:flex-row h-screen">
+    <!-- Left Section: Task Details and Options -->
     <section class="w-full lg:w-1/3 bg-background-50 rounded-lg shadow-md p-4 lg:overflow-y-auto h-auto lg:h-full lg:mr-6 mb-6 lg:mb-0">
       <h1 id="task-name" class="text-2xl font-semibold mb-4"></h1>
       <p id="task-description" class="text-gray-700 mb-4"></p>
@@ -40,6 +41,7 @@
       <ul id="students" class="space-y-2"></ul>
     </section>
 
+    <!-- Right Section: Current Student and Problems -->
     <section class="w-full lg:w-2/3 bg-background-50 rounded-lg shadow-md p-6 lg:overflow-y-auto h-auto lg:h-full">
       <div class="space-y-6 mb-6">
         <h2 id="current-student-name" class="text-xl font-semibold"></h2>
@@ -67,6 +69,7 @@
       </div>
     </section>
   </main>
+
   <script>
     const classroom = new Classroom(app);
 
