--- a/src/views/pages/class/task-print.ejs
+++ b/src/views/pages/class/task-print.ejs
@@ -10,7 +10,10 @@
 
 <body class="lg:overflow-y-hidden">
   <%- include("../../components/classroom-sidebar.ejs", { classId }) %>
+
   <main class="sm:ml-64 p-6 flex flex-col lg:flex-row h-screen">
+
+    <!-- Task Information Section -->
     <section class="w-full lg:w-1/3 bg-background-50 rounded-lg shadow-md p-4 lg:overflow-y-auto h-auto lg:h-full lg:mr-6 mb-6 lg:mb-0">
       <h1 id="task-name" class="text-2xl font-semibold mb-4"></h1>
       <p id="task-description" class="text-gray-700 mb-4"></p>
@@ -19,26 +22,31 @@
 
       <h2 class="text-xl font-semibold mb-4">Print Options</h2>
       <div class="mb-4">
+        <!-- Display Task Name Input -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display Task Name</label>
           <input id="display-task-name" type="text" class="p-3 border border-gray-300 rounded-md w-full mt-1" placeholder="Enter task name" />
         </div>
 
+        <!-- Display Task Description Input -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display Task Description</label>
           <textarea id="display-task-description" class="p-3 border border-gray-300 rounded-md w-full mt-1" placeholder="Enter task description"></textarea>
         </div>
 
+        <!-- Display School Name Input -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display School Name</label>
           <input id="display-school-name" type="text" class="p-3 border border-gray-300 rounded-md w-full mt-1" placeholder="Enter school name" />
         </div>
 
+        <!-- Display Teacher Name Input -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display Teacher Name</label>
           <input id="display-teacher-name" type="text" class="p-3 border border-gray-300 rounded-md w-full mt-1" placeholder="Enter teacher name" />
         </div>
 
+        <!-- Display Student ID Toggle -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display Student ID</label>
           <label class="inline-flex items-center mt-1">
@@ -47,6 +55,7 @@
           </label>
         </div>
 
+        <!-- Display Student Names Toggle -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display Student Names</label>
           <label class="inline-flex items-center mt-1">
@@ -55,6 +64,7 @@
           </label>
         </div>
 
+        <!-- Display Title Page Toggle -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Display Title Page</label>
           <label class="inline-flex items-center mt-1">
@@ -63,6 +73,7 @@
           </label>
         </div>
 
+        <!-- Two Column Layout Toggle -->
         <div class="mb-4">
           <label class="block text-sm font-medium text-gray-700">Two Column Layout</label>
           <label class="inline-flex items-center mt-1">
@@ -71,6 +82,7 @@
           </label>
         </div>
 
+        <!-- Print All Button -->
         <button id="print-all" class="bg-primary-600 text-white px-4 py-2 rounded-lg hover:bg-primary-500">
           Print All
         </button>
@@ -82,6 +94,7 @@
       <ul id="students" class="space-y-2"></ul>
     </section>
 
+    <!-- Student Task Section -->
     <section class="w-full lg:w-2/3 bg-background-50 rounded-lg shadow-md p-6 lg:overflow-y-auto h-auto lg:h-full">
       <div class="space-y-6 mb-6">
         <h2 id="current-student-name" class="text-xl font-semibold"></h2>
@@ -99,14 +112,17 @@
     </section>
   </main>
   <%- include("../../components/problems-printer.ejs") %>
+
   <script>
     const classroom = new Classroom(app);
 
+    // Fetch task details and render
     classroom.getTask("<%= taskId %>").then((response) => {
       if (response.status === "success") {
         document.getElementById("task-name").textContent = response.data.name;
         document.getElementById("task-description").textContent = response.data.description;
 
+        // Populate print option inputs
         document.getElementById("display-task-name").value = response.data.name;
         document.getElementById("display-task-description").value = response.data.description;
 
@@ -117,8 +133,10 @@
             const classStudents = response.data.students;
             const taskStudents = userTasks.map((userTask) => classStudents.find((student) => student.studentNumber === userTask.studentNumber));
 
+            // Filter out deleted students
             const students = response.data.students.filter((student) => !student.deleted);
 
+            // Update document title and student counts
             document.title = `MPC Lab | Print Task - ${response.data.name}`;
             document.getElementById("classroom-name").textContent = response.data.name;
             const studentsCount = document.getElementById("students-count");
@@ -128,11 +146,14 @@
             studentsCount.classList.remove("hidden");
             adminsCount.classList.remove("hidden");
 
+            // Render students list
             const studentsList = document.getElementById("students");
             taskStudents.forEach((student) => {
               const studentElement = document.createElement("li");
               studentElement.className = "p-2 bg-white hover:bg-gray-100 rounded-md border cursor-pointer";
               studentElement.textContent = student.name;
+
+              // Add click event to select student
               studentElement.addEventListener("click", (event) => {
                 event.target.parentElement.querySelectorAll("li").forEach((element) => {
                   element.classList.remove("bg-primary-100");
@@ -148,6 +169,7 @@
               studentsList.appendChild(studentElement);
             });
 
+            // Print all button functionality
             const printAllButton = document.getElementById("print-all");
             printAllButton.addEventListener("click", () => {
               printAllButton.disabled = true;
@@ -214,6 +236,7 @@
       }
     });
 
+    // Print solution button functionality
     const printSolutionButton = document.getElementById("print-solution");
     printSolutionButton.addEventListener("click", async () => {
       if (currentProblems) {
