--- a/src/views/components/head.ejs
+++ b/src/views/components/head.ejs
@@ -3,3 +3,4 @@
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="stylesheet" href="/css/styles.css">
 <script src="/js/app.js"></script>
+<script src="/js/components/loading-bar.js" defer></script>
